# vexa-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/agent/: agent.py  agent_insight.py
app/agent/prompts/: agent_insight_prompt.py  agent_prompt.py  system.py
app/agent/tools/: __init__.py  describe_table.py  run_query.py  save_insight.py  send_email.py
app/config/: database.py  lifespan.py  middlewares.py
app/controllers/: auth.py  connection.py  conversation.py  health.py  insight.py
app/dtos/: auth.py  connection.py  conversation.py  health.py  insight.py  message.py
app/exceptions/: __init__.py  bad_request.py  http_exception_handler.py  unhandled_error_handler.py  validation_error_handler.py
app/middlewares/: session.py
app/models/: __init__.py  chat.py  connection.py  conversation.py  insight.py  message.py  user.py
app/routes/: __init__.py  auth.py  connection.py  conversation.py  health.py  insight.py
app/services/: auth.py  connection.py  conversation.py  database.py  email.py  health.py  insight.py  llm.py  message.py  storage.py  transcription.py  tts.py
app/utils/: connection_url.py  encrypt.py  password.py
