[project]
name = "api"
version = "0.1.0"
description = "REST API for Vexa"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "bcrypt>=5.0.0",
    "black>=25.11.0",
    "boto3>=1.41.0",
    "cryptography>=46.0.3",
    "edge-tts>=7.2.7",
    "emails>=0.6",
    "fastapi[standard]>=0.121.2",
    "isort>=7.0.0",
    "itsdangerous>=2.2.0",
    "litellm[mlflow]>=1.80.0",
    "openai-whisper>=20250625",
    "psycopg[binary]>=3.2.13",
    "python-dotenv>=1.2.1",
    "tortoise-orm[accel,asyncpg]>=0.25.1",
]
